[package]
name = "sd-freya"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "sd-freya"
path = "src/main.rs"

[[bin]]
name = "gallery"
path = "src/main_gallery.rs"

[dependencies]
# dioxus = { git = "https://github.com/DioxusLabs/dioxus", rev="0527cff3a59ba3176f7510a7234c5977ce1b17d7", features = ["macro", "hooks"]}
# freya = { git="https://github.com/marc2332/freya", rev="66e9eb9aef7a5d8a43c61e7e6c5b5ffc3ba2f648" }
dioxus = { git = "https://github.com/DioxusLabs/dioxus", rev="11c9abcf7ce731ccb4a44c52de383c090ab319af", features = ["macro", "hooks"] }
freya = { git="https://github.com/marc2332/freya" }
winit = "0.28.2"
diffusers = "0.3.1"